利用 argparse 重构了 interface.py 并且同步修改了 interface.gd 里的接口, 修改了 format_data.py 中的一些函数名, 修复了不论怎么选都会默认导出所有考试的成绩的 bug

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@ export_presets.cfg
 # Imported translations (automatically generated from CSV files)
 *.translation
 
+# VSCode
+.vscode/
+.history/
+
+# Python
+__pycache__/
+
 # My own ignores
-tmp.tscn
-tmp.gd
+tmp.*
+Example/
